# multiplayer-minesweeper

./: Cargo.toml  README.md  tailwind.config.js
src/: board.rs  lib.rs  main.rs
web/: index.html  script.js  style.css
